[package]
name = "common"
version = "0.1.0"
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano={git="https://github.com/vulkano-rs/vulkano"}
vulkano-shaders={git="https://github.com/vulkano-rs/vulkano"}

num-traits="*"
