[package]
name = "engine"
version = "0.1.0"
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics= { path = "../graphics" }
octonions-rs= { path = "../octonions-rs" }
winit = "0.19"
