[package]
name = "engine"
version = "0.1.0"
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics= { path = "../graphics" }
common= { path = "../common" }
winit= "0.29.3"
num-traits= "0.2.17"
