[package]
name = "graphics"
version = "0.1.1"
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit="0.19"
vulkano={ git="https://github.com/simdimdim/vulkano", branch = "master"}
vulkano-win={ git="https://github.com/simdimdim/vulkano", branch = "master"}
vulkano-shaders={ git="https://github.com/simdimdim/vulkano", branch = "master"}
vk-sys={ git="https://github.com/simdimdim/vulkano", branch = "master" }
common={path="../common"}
num-traits="*"
tobj="*"
