[package]
name = "hatch"
version = "0.1.0"
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
common={path="../common"}
winit="0.20"
